style.css
html > * {
    margin: 0;
    padding: 0;
    width: 100vw;
    height: 100vh;
}  

@font-face {
    font-family: norse-bold;
    src: url("images/Norse-Bold.otf") format("opentype");
}


.material-symbols-outlined {
  font-variation-settings:
  'FILL' 1,
  'wght' 700,
  'GRAD' 0,
  'opsz' 16
}

.inline-icon {
    vertical-align: -6px;
    font-size: 16px;
}
.main-container {
    width: 100vw;
    height: 100vh;
    display: flex;
}
.container-1 {
    width: 40vw;
    height: 100vh;

    background-image: url(images/large-img-unszd.avif);
    overflow: hidden;
}

.sidebar {
    margin: 0;
    padding: 10px 0;
    background-color: rgba(0, 0, 0, 0.452);
    width: 100%;
    font-family: norse-bold; /* good practice is to add a backup font, but zzzzz */
    height: auto;

    display: flex;
    justify-content: center;
    align-items: center;

    position: relative;
    top: 30%;
    bottom: 70%;
}



.sidebar img {
    width: 95px;
    height: 125px;
    flex-shrink: 1;
}

.sidebar h1 {
    color: white;
    font-size: 95px;
    margin: 0;
    padding: 20px 0 0 0;
    height: auto;
    width: auto;
}

.container-2 {
    width: 60vw;
    height: 100vh;
    margin: 0;
    padding: 0;
    font-family: 'Roboto', sans-serif;
}

.description {
    overflow: hidden;
    background-color: rgba(230, 230, 230, 0.558);
    width: inherit;
    height: 33%;
    font-size: 1rem;
}

.description h3 {
    font-family: 'Roboto', sans-serif;
    font-weight: bold;
    margin: 0;
    padding: 10% 0 10% 5%;
    width: 62%;  
}


form {
    width: auto;
    padding: 0 0 3% 5%;
    margin: 0;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
}

form h2 {
    margin: 0.83em 0 0 0;
}

#instructions {
    margin: 0 0 1em 0;
    font-weight: 100;
}

form .info-container {
    display: flex;
    width: auto;
}

.col-one {
    width: 50%;
}

.col-two {
    width: 50%;
}

.col-one > div, .col-two > div {
    display: flex;
    flex-direction: column;
    width: 100%;
    margin: 15px 1px;
}

form input {
    width: 70%;
    padding: 5px;
    margin: 2px;
    border: 1px solid #c8cace;
}

form input:focus {
    box-shadow: 5px 5px 4px #c8cace;
}

form label {
    color: rgb(109, 108, 108);
    width: 70%;
    font-size: 0.8rem;
    padding: 0 5px;

}

label.required::after {
    content: '   *';
    color: red;
    font-style: italic;
    font-weight: 500;
    font-family: 'Roboto', sans-serif;

}

span.required {
    color: red;
    font-style: italic;
    font-weight: 500;
}


.submit-container {
    height: auto;
    width: auto;
    padding: 30px 0 0 5%;
    margin: 0;
    box-sizing: border-box;
    box-shadow: inset 0 5px 8px -5px darkgray;
}

.submit-container button {
    color: white;
    padding: 10px 20px;
    border-radius: 10px;
    background-color: #596D48;
    margin-bottom: 10px;
    cursor: pointer;
}

.submit-container p {
    font-size: 0.9rem;
}

.submit-container a {
    text-decoration: none;
    color: #596D48;
    font-family: 'Roboto', sans-serif;
}

 .error-border {
    border: 2px solid red;
    background-color: rgba(255, 0, 0, 0.323);
 }

